--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,6 +84,21 @@ services:
             - '/dev/shm:/dev/shm'
         networks:
             - sail
+    phpmyadmin:
+        image: phpmyadmin/phpmyadmin:5
+        ports:
+           - 8090:80
+        links:
+           - mysql
+        environment:
+           PMA_HOST: mysql
+           PMA_PORT: 3306
+        depends_on:
+           mysql:
+               condition: service_healthy
+        networks:
+           - sail
+
 networks:
     sail:
         driver: bridge
